_archive/content-services/5.1/glossary/glossary_c.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Glossary
option: glossary
---

# C

Glossary terms starting with the letter C.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **CachingContentStore**

    The CachingContentStore \(CCS\) class adds caching to any ContentStore implementation. Wrapping a slow ContentStore in a CachingContentStore improves access speed in many use cases. Example use cases include document storage using a XAM appliance or cloud-based storage, such as Amazon's S3.

-   **CAS**

    See Central Authentication Service.

-   **catalog**

    Digital Asset Management term. Cataloguing is the process of adding metadata to digital assets \(for example, images and video\). A catalog comprises the digital assets \(i.e. the assets that include descriptive metadata\) stored in a repository.

-   **category**

    A category in Alfresco allows you to organize your content to help you retrieve the content you are looking for. You classify your content items in Alfresco with categories. The categories are organized into related groups to form a hierarchy. You can link a content item to more than one category.

-   **CCC \(Community Chart Components\)**

    CCC is the charting library from CTools. CCC provides open-source and customizable chart visualization. You can use CCC2 to create a custom user interface in Alfresco Analytics.

-   **Central Authentication Service**

    The Central Authentication Service \(CAS\) is an authentication system that enables enterprise single sign-on to web sites.

-   **CIFS**

    Microsoft Common Internet File System \(CIFS\) is a network file system for sharing files across the Internet.

-   **<classpathRoot\>**

    The <classpathRoot\> is the default directory whose contents are automatically added to the start of your application server's classpath. The location of this directory varies depending on your application server.

-   **CMIS**

    See Content Management Interoperability Services.

-   **Community Chart Components**

    See CCC.

-   **codec**

    Digital Asset Management term. A codec is a program that can encode and decode digital data \(audio or video\). H.264/MPEG-4 AVC is a codec. FFmpeg supports many common codecs.

-   **composite action**

    A composite action is a collection of actions that are combined in a designated order to make one unit of work. If any action within the composite fails, then no other actions within this composite are completed. The unit of work can be any size that you determine.

-   **condition**

    A condition is a test applied to an action used to determine whether the action can be performed.

-   **content**

    Files or documents made of two main elements: the content itself and information about the content \(metadata\). For example, documents, video, audio, images, XML, and HTML.

-   **content aspect**

    See aspect.

-   **Content Delivery Network**

    A Content Delivery \(or Distribution\) Network \(CDN\) delivers contents to users using servers and data centers provided by the CDN operator. Examples are Amazon CloudFront and Brightcove Zencoder.

-   **Content Management Interoperability Services**

    The Content Management Interoperability Services \(CMIS\) standard defines a domain model and Web Services and Restful AtomPub bindings that can be used by applications to work with one or more Content Management repositories/systems.

    The CMIS interface is designed to be layered on top of existing Content Management systems and their existing programmatic interfaces. It is not intended to prescribe how specific features should be implemented within those CM systems, not to exhaustively expose all of the CM system's capabilities through the CMIS interfaces. Rather, it is intended to define a generic/universal set of capabilities provided by a CM system and a set of services for working with those capabilities.

    Source: [http://docs.oasis-open.org/cmis/CMIS/v1.0/cmis-spec-v1.0.html](http://docs.oasis-open.org/cmis/CMIS/v1.0/cmis-spec-v1.0.html)

    Alfresco fully implements both the CMIS 1.0 and 1.1 standards to allow your application to manage content and metadata in an Alfresco repository or in Alfresco in the cloud.

-   **content model**

    A content model is a collection of related content types and aspects.

-   **content type**

    Content can be categorized as a type and can be one type at any one time. The type describes the fundamental structure of the content.

-   **content store**

    By default, Alfresco is configured with two file content stores: the File Content Store and Deleted Content Store.

-   **Coordinated Universal Time \(UTC\)**

    The primary [time standard](https://en.wikipedia.org/wiki/Time_standard) by which the world regulates clocks and time.

-   **CTools Community Data Access \(CDA\)**

    CTools is a collaboration environment, and CDA \(Community Data Access\) is a Pentaho plugin that allows you to flexibly access data. CTools CDA can be used in Alfresco Analytics.

-   **cURL**

    cURL is a command-line tool for getting or sending files using URL syntax. Libcurl is the equivalent library. cURL uses libcurl, which supports most common internet protocols.


